--- a/kadai_008.ipynb
+++ b/kadai_008.ipynb
@@ -1,556 +1,56 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "top_line = 10\n",
-        "botom_line = 20\n",
-        "high_line = 5\n",
-        "area =((top_line + botom_line) * high_line / 2)\n",
-        "\n",
-        "print(f\"上辺：{top_line}cm\")\n",
-        "print(f\"下辺：{botom_line}cm\")\n",
-        "print(f\"高さ：{high_line}cm\")\n",
-        "\n",
-        "print(\"公式：台形の面積 = （上辺+下辺）× 高さ ÷ \" + str(2))\n",
-        "print(str(area) + \"㎠\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2Xu8oo3o5a2b",
-        "outputId": "fb2f50ab-145a-4633-891c-6eb7aab9bb60"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "上辺：10cm\n",
-            "下辺：20cm\n",
-            "高さ：5cm\n",
-            "公式：台形の面積 = （上辺+下辺）× 高さ ÷ 2\n",
-            "75.0㎠\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "user_names = [\"侍太郎\",\"侍一郎\",\"侍二郎\",\"侍三郎\",\"侍四郎\"]\n",
-        "\n",
-        "print(user_names[1]) # 2番の要素だけを表示\n",
-        "\n",
-        "user_names[1] = \"侍花子\" # ２番目の要素を更新\n",
-        "print(user_names)\n",
-        "\n",
-        "user_names.append(\"侍五郎\") # ６番目の要素を追加\n",
-        "print(user_names)\n",
-        "\n",
-        "user_names.pop(2) # ３番目の要素を削除（０始まりのため２を指定）\n",
-        "print(user_names)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bxhgr3S3b6s5",
-        "outputId": "f39c5b33-99a7-46a5-dc6c-0535d21a3155"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "侍一郎\n",
-            "['侍太郎', '侍花子', '侍二郎', '侍三郎', '侍四郎']\n",
-            "['侍太郎', '侍花子', '侍二郎', '侍三郎', '侍四郎', '侍五郎']\n",
-            "['侍太郎', '侍花子', '侍三郎', '侍四郎', '侍五郎']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "country_names = (\"日本\",\"アメリカ\",\"イギリス\",\"フランス\")\n",
-        "\n",
-        "# 3番目の要素を取り出す\n",
-        "print(country_names[2])\n",
-        "\n",
-        "# すべての要素を取り出す\n",
-        "print(country_names)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ArRQ8q4Ce0Lq",
-        "outputId": "ef8086fa-cdf9-427d-ae4b-d01cb828464e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "イギリス\n",
-            "('日本', 'アメリカ', 'イギリス', 'フランス')\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "dWfHPa3dAb3M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "user_names = [\"侍太郎\",\"侍一郎\",\"侍二郎\",\"侍三郎\",\"侍四郎\"]\n",
-        "\n",
-        "print(user_names[1]) # 2番目の要素だけを表示\n",
-        "\n",
-        "user_names[1] = \"侍花子\" # 2番目の要素を更新\n",
-        "print(user_names)\n",
-        "\n",
-        "user_names.append(\"侍五郎\") # 6番目の要素を追加\n",
-        "print(user_names)\n",
-        "\n",
-        "user_names.pop(2) # 3番目の要素を削除（0始まりのため2を指定）\n",
-        "print(user_names)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8BvG5_qt-skV",
-        "outputId": "32584793-9047-4139-d2bc-2cedba81c7dc"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "侍一郎\n",
-            "['侍太郎', '侍花子', '侍二郎', '侍三郎', '侍四郎']\n",
-            "['侍太郎', '侍花子', '侍二郎', '侍三郎', '侍四郎', '侍五郎']\n",
-            "['侍太郎', '侍花子', '侍三郎', '侍四郎', '侍五郎']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "country_names = (\"日本\",\"アメリカ\",\"イギリス\",\"フランス\")\n",
-        "\n",
-        "# 3番目の要素を取り出す\n",
-        "print(country_names[2])\n",
-        "\n",
-        "# 全ての要素を取り出す\n",
-        "print(country_names)\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rOSYoSyyCSOW",
-        "outputId": "40df1f42-4344-4c33-e183-efad3a6064ad"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "イギリス\n",
-            "('日本', 'アメリカ', 'イギリス', 'フランス')\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "country_names = {\"アメリカ\",\"イギリス\",\"日本\",\"フランス\"}\n",
-        "\n",
-        "# セット全体を表示\n",
-        "print(counntry_names)\n",
-        "\n",
-        "country_names.add(\"ドイツ\") # 「ドイツ」をセットに追加\n",
-        "print(country_names)\n",
-        "\n",
-        "country_names.remove(\"イギリス\") # セットから「イギリス」を削除\n",
-        "print(country_names)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BNrEvUTrTTN9",
-        "outputId": "73a4f76f-707d-4f89-c6e3-3c573b166fcf"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'フランス', 'アメリカ', 'イギリス', '日本'}\n",
-            "{'アメリカ', 'フランス', 'ドイツ', 'イギリス', '日本'}\n",
-            "{'アメリカ', 'フランス', 'ドイツ', '日本'}\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 連想配列を作成\n",
-        "personal_date = {\"name\": \"侍太郎\", \"age\": 36, \"gender\": \"男性\",}\n",
-        "\n",
-        "# キー「name」の表示\n",
-        "print(personal_data[\"name\"])\n",
-        "\n",
-        "# 連想配列全体を表示\n",
-        "print(personal_data)\n",
-        "\n",
-        "# キー「age」の値を更新\n",
-        "personal_data[\"age\"] = 37\n",
-        "\n",
-        "# 新しく要素（キーと値）を追加\n",
-        "personal_data[\"address\"] = \"東京都\"\n",
-        "\n",
-        "# 連想配列全体を表示\n",
-        "print(personal_data)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 219
-        },
-        "id": "JVL76lkCbpPS",
-        "outputId": "0c267f61-d99a-44db-fcab-4f717cbd9bf2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'personal_data' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-370d5a8da381>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# キー「name」の表示\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpersonal_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"name\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# 連想配列全体を表示\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'personal_data' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "array = [\"月曜日は晴れです\",\"火曜日は雨です\",\"水曜日は晴れです\",\"木曜日は晴れです\",\"金曜日は曇りです\",\"土曜日は曇りのち雨です\",\"日曜日は雷雨です\"]\n",
-        "print(array)\n",
-        "print(array[2])\n",
-        "\n",
-        "dictionary = {\"man\": \"晴れ\", \"tue\": \"雨\", \"wed\": \"晴れ\", \"thu\": \"晴れ\", \"fri\": \"曇り\", \"sat\": \"曇りのち雨\", \"sun\": \"雷雨\",}\n",
-        "print(dictionary[\"wed\"])\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4ndaLzeYgSyC",
-        "outputId": "a9060b05-7727-446a-9f1e-9b14d0ccb476"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['月曜日は晴れです', '火曜日は雨です', '水曜日は晴れです', '木曜日は晴れです', '金曜日は曇りです', '土曜日は曇りのち雨です', '日曜日は雷雨です']\n",
-            "水曜日は晴れです\n",
-            "晴れ\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(45 + 18) # 算術演算子を使った場合の戻り値を出力する\n",
-        "print(45 > 18) # 比較演算子を使った場合の戻り値を出力する"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GPMAlxLQWQ6h",
-        "outputId": "d24117ba-c6e9-48a4-9b78-69ac094d652a"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "63\n",
-            "True\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"5\" == 5)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QZ0ShEI7YM9y",
-        "outputId": "dfdcd36c-5bef-4c8b-c2c4-33ec731f0747"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "num1 = 5\n",
-        "num2 = \"5\"\n",
-        "\n",
-        "if num1 == int(num2):\n",
-        "    print(\"num1とnum2は等しいです\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SR-fRIyJYech",
-        "outputId": "dd6157f9-6d6d-4025-f247-5fdba84735ed"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "num1とnum2は等しいです\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#ランダムな整数を利用するために、randomモジュールをインポート\n",
-        "import random\n",
-        "\n",
-        "# 変数numに0～4までのランダムな整数を代入する\n",
-        "num = random.randint(0,4)\n",
-        "\n",
-        "# 変数numの値を出力\n",
-        "print(num)\n",
-        "\n",
-        "# 変数numの値が4であれば、「大当たりです」という文字列を出力する\n",
-        "if num == 4:\n",
-        "    print(\"大当たりです\")\n",
-        "else:\n",
-        "    print(\"はずれです\")\n",
-        ""
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AthLYluiZ1s-",
-        "outputId": "b952bbf4-cae9-440d-d19c-97c4adbdb4db"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n",
-            "はずれです\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import random\n",
-        "\n",
-        "num = random.randint(0,4)\n",
-        "\n",
-        "print(num)\n",
-        "\n",
-        "if num == 4:\n",
-        "    print(\"大当たりです\")\n",
-        "elif num == 3:\n",
-        "    print(\"当たりです\")\n",
-        "else:\n",
-        "    print(\"はずれです\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-2lthxJobixi",
-        "outputId": "43a42262-eefa-4a88-8a5a-d0e0b107c2fc"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "はずれです\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# ランダムな整数を利用するために、randomモジュールをインポート\n",
-        "import random\n",
-        "\n",
-        "# 変数numに0～4までのランダムな整数を代入する\n",
-        "num = random.randint(0,4)\n",
-        "\n",
-        "# 変数numの値を出力\n",
-        "print(num)\n",
-        "\n",
-        "# すべての条件が成り立つ場合にのみ処理を行う(変数numの値が2)\n",
-        "if 1 < num and num < 3:\n",
-        "    print(\"変数numは１より大きく、3より小さいです\")\n",
-        "else:\n",
-        "    print(\"and条件が成り立ちませんでした\")\n",
-        "\n",
-        "# 1つでも条件が成り立てば処理を行う（変数numの値が1または3）\n",
-        "if num == 1 or num == 3:\n",
-        "    print(\"変数numは1または3です\")\n",
-        "else:\n",
-        "    print(\"or条件が成り立ちませんでした\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "t7Ljd4PVeMdc",
-        "outputId": "fd360a29-63f6-4cf0-cb58-7b2fdab66aa0"
-      },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n",
-            "変数numは１より大きく、3より小さいです\n",
-            "or条件が成り立ちませんでした\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "Fizz = var * 3\n",
-        "    print(\"Fizz\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 110
-        },
-        "id": "C6o4s3Y4jPAJ",
-        "outputId": "abc425a3-19a0-4339-8585-9c3bb713f3c0"
-      },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "unexpected indent (<ipython-input-26-0fb78fc76e53>, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-0fb78fc76e53>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"Fizz\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "var = 100\n",
-        "if var % 3 == 0:\n",
-        "    print(\"Fizz\")\n",
-        "elif var % 5 == 0:\n",
-        "    print(\"Buzz\")\n",
-        "elif var % 3 == 0 and var % 5 == 0:\n",
-        "    print(\"Fizzbuzz\")\n",
-        "else:\n",
-        "    print(var)\n"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K6tKRbMKpRV_",
-        "outputId": "2d994660-1e74-4ee5-e590-0ef0c4884a10"
+        "outputId": "f6b37597-7cce-47e3-e618-30652c171446"
       },
-      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Buzz\n"
           ]
         }
+      ],
+      "source": [
+        "var = 10\n",
+        "if var % 3 == 0 and var % 5 == 0:\n",
+        "    print(\"Fizzbuzz\")\n",
+        "elif var % 5 == 0:\n",
+        "    print(\"Buzz\")\n",
+        "elif var % 3 == 0:\n",
+        "    print(\"Fizz\")\n",
+        "else:\n",
+        "    print(var)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lNExdvF8q327"
+      },
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
